--- a/Simple/index.html
+++ b/Simple/index.html
@@ -13,8 +13,11 @@
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
 
-  <script src="js/BattleAddCookie.js"></script>
+  <script src="js/BattleAdd.js"></script>
+  <script src="js/BattleReset.js"></script>
+
   <script src="js/LoadCookie.js"></script>
+  <script src="js/SaveCookie.js"></script>
   
 <body>
   <center><h2 class="heading">マリオメーカー2　みんなでバトル　戦績表　〜簡易版〜</h2></center>
